# NSL

./: .gitattributes  .gitignore  BLOCKED_ON_V_P1_D.md  CHANGELOG-CALIBRATION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SPECIFICATION.md  STATUS.md  test_m6.txt
crates/nsl-abi/: Cargo.toml
crates/nsl-abi/src/: lib.rs
crates/nsl-abi/tests/: signature_agreement.rs
crates/nsl-ast/: Cargo.toml
crates/nsl-ast/src/: agent.rs  block.rs  decl.rs  expr.rs  lib.rs  operator.rs  pattern.rs  stmt.rs  types.rs  visitor.rs
crates/nsl-ast/tests/: agent_def.rs
crates/nsl-cli/: Cargo.toml
crates/nsl-cli/src/: analysis_bridges.rs  args.rs  ast_scan.rs  debug.rs  formatter.rs  health_monitor.rs  lib.rs  loader.rs  main.rs  mangling.rs  meta_flags.rs  monitor.rs  pipeline.rs  profile.rs  profile_render.rs  resolver.rs  shape_debug.rs  standalone.rs  wggo_explain.rs
crates/nsl-cli/tests/: calibration_flag_validation.rs  calibration_no_cargo.rs  calibration_pipeline_integration.rs  ccr_checkpoint_activation_parity.rs  ccr_checkpoint_activation_parity_gpu.rs  ccr_checkpoint_parity.rs  ccr_periodic_stride_gate.rs  cep_cli.rs  cep_emit_source_cli.rs  cep_g6_1_2_source_ad_nested_cli.rs  cep_g6_recovery_ft_cli.rs  cep_joint_cli.rs  cep_slice_cli.rs  check_perf_cli.rs  clone_elision_alias_corruption_e2e.rs  conv2d_source_ad_grad_e2e.rs  cpdt_cli.rs  cpdt_part3_no_silent_v1.rs  cpdt_part3_v2_10_weight_prefix_shape_validation.rs  cpdt_part3_v2_12_v3_bias_source_activation.rs  cpdt_part3_v2_14_v4_bias_source_activation.rs  cpdt_part3_v2_15_hf_bias_auto_pack.rs  cpdt_part3_v2_16_hf_bias_suffix_and_orphans.rs  cpdt_part3_v2_18_hf_multi_block_composition.rs  cpdt_part3_v2_19_multi_model_moe_composition.rs  cpdt_part3_v2_20_context_parallel_lookup_fix.rs  cpdt_part3_v2_21_context_parallel_scale_bitcast.rs  cpdt_part3_v2_22_context_parallel_naive_fallback.rs  cpdt_part3_v2_3_moe_dispatch_ffn.rs  cpdt_part3_v2_5_moe_dispatch_swiglu.rs  cpdt_part3_v2_7_hf_mixtral_auto_pack.rs  cpdt_part3_v2_8_geglu_reglu_activations.rs  cpdt_weights_cli.rs  cpkd_design_cli.rs  cpkd_distill_e2e.rs  csha_check_report_cli.rs  csha_checkpoint_decorator_cli_e2e.rs  csha_fused_dgamma_runtime.rs  csha_gap_gpu_e2e_smoke.rs  csla_layerwise_gate.rs  (+73 more)
crates/nsl-codegen/: -  ARCHITECTURE.md  Cargo.toml  build.rs
crates/nsl-codegen/examples/: memory_timeline_demo.rs
crates/nsl-codegen/src/: ad_rules.rs  agent.rs  autotune.rs  backend_amdgpu.rs  backend_metal.rs  backend_ptx.rs  backend_wgsl.rs  builtins.rs  c_export_table.rs  c_header.rs  c_wrapper.rs  ccr.rs  cep.rs  cep_emit_source.rs  cep_extract.rs  cep_importance.rs  cep_oracle.rs  cep_rewrite.rs  cep_search.rs  cep_slice.rs  cfie.rs  cfie_cost.rs  cfie_decode_attention.rs  cfie_fused_sample.rs  cfie_grammar.rs  cfie_grammar_ptx.rs  cfie_kv_plan.rs  cfie_kv_quant.rs  cfie_kv_quant_ptx.rs  cfie_persistent.rs  cfie_persistent_ptx.rs  cfie_sample_ptx.rs  cfie_serve.rs  cfie_spec_sampler_ptx.rs  cfie_speculative.rs  cfie_speculative_ptx.rs  compiler.rs  context.rs  context_parallel.rs  cost_model.rs  (+128 more)
crates/nsl-codegen/tests/: ad_csha_fallback.rs  ad_csha_reverse_walk_wiring.rs  attention_sink_decorator_integration.rs  awq_ast_prescan_differential.rs  awq_autodiscovery_entry_points.rs  awq_full_pipeline.rs  awq_hook_end_to_end.rs  awq_real_subprocess_link.rs  bench_cli_smoke.rs  bench_fixtures.rs  bench_output_format.rs  bench_sensitivity_fixtures.rs  bitnet_absmean_quant.rs  bitnet_loader.rs  bitnet_logit_match.rs  bitnet_orchestrator.rs  bitnet_packed_repr.rs  bitnet_ptx_snapshots.rs  bitnet_quantized_ternary_gemm.rs  bitnet_reference.rs  bitnet_reference_impl.rs  bitnet_sass_discipline.rs  c_header_compiles.rs  c_header_snapshot.rs  calibration_emits_binary.rs  calibration_end_to_end.rs  cep_extract_realmodels.rs  cep_g18_e2e_binary_claim.rs  cfie_decode_attn_gpu_parity.rs  cfie_decode_block_gpu_parity.rs  cfie_fused_sample_gpu_parity.rs  cfie_generate_gpu_e2e.rs  cfie_kv_quant_gpu_parity.rs  cfie_serve_binary_gpu_e2e.rs  cfie_serve_end_to_end.rs  cfie_speculative_generate_gpu_e2e.rs  cfie_speculative_gpu_parity.rs  cfie_weight_binding_gpu_parity.rs  checkpoint_cycle11_structural.rs  checkpoint_v1_integration.rs  (+232 more)
crates/nsl-errors/: Cargo.toml
crates/nsl-errors/src/: diagnostic.rs  lib.rs  source.rs  span.rs
crates/nsl-parser/: Cargo.toml
crates/nsl-parser/src/: agent.rs  block.rs  decl.rs  expr.rs  lib.rs  parser.rs  pattern.rs  pratt.rs  stmt.rs  types.rs
crates/nsl-parser/tests/: agent_parse.rs
crates/nsl-runtime/: ARCHITECTURE.md  Cargo.toml
crates/nsl-runtime/src/: args.rs  assert.rs  autodiff.rs  awq.rs  backward_context.rs  c_api.rs  calibration_data.rs  checkpoint.rs  cpu.rs  csla_stat.rs  cuda.rs  data_source.rs  dataloader.rs  deterministic_ops.rs  dict.rs  dlpack.rs  fase_bc.rs  fase_step.rs  file_io.rs  flash_attention.rs  fp8.rs  fused_adapter.rs  fused_kl_ce.rs  fused_linear_ce.rs  fuzz.rs  gptq.rs  gpu_backend.rs  grad_context.rs  grad_integrity.rs  grammar.rs  hof.rs  huggingface.rs  interop_stubs.rs  io.rs  kernel_profiler.rs  lib.rs  list.rs  math.rs  memory.rs  multimodal.rs  (+31 more)
crates/nsl-runtime/tests/: auto_generated_model_create_populates_registry.rs  backward_does_not_consult_live_tape.rs  cpu_only_build.rs  cross_thread_backward.rs  cuda_clock.rs  desc_tape_id_roundtrip.rs  double_backward_returns_typed_error.rs  export_registry_populates_eagerly.rs  export_tuple_marshaling.rs  forward_in_progress_returned_on_reentry.rs  forward_wrapper_matches_named_call.rs  fp8_cast.rs  fp8_dispatcher.rs  fp8_matmul_backward.rs  fp8_matmul_forward.rs  fp8_scale.rs  gpu_maxpool2d_argmax_readback.rs  gpu_strided_view_ops.rs  grad_context_magic_validation.rs  (+31 more)
crates/nsl-semantic/: Cargo.toml
crates/nsl-test/: Cargo.toml
python/: pyproject.toml
python/nslpy/: __init__.py  _bridge.py  _core.py  autograd.py  hub.py  onnxrt.py
python/tests/: test_bridge.py  test_core.py  test_hub.py  test_m62_call.py  test_m62_export.py  test_m62_grad_context.py  test_m62_onnx_op.py  test_m62_weight_loading.py
(+1247 files in other folders)
