[workspace]
resolver = "2"
members = [
    "crates/nsl-errors",
    "crates/nsl-lexer",
    "crates/nsl-ast",
    "crates/nsl-parser",
    "crates/nsl-semantic",
    "crates/nsl-codegen",
    "crates/nsl-runtime",
    "crates/nsl-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
nsl-errors = { path = "crates/nsl-errors" }
nsl-lexer = { path = "crates/nsl-lexer" }
nsl-ast = { path = "crates/nsl-ast" }
nsl-parser = { path = "crates/nsl-parser" }
nsl-semantic = { path = "crates/nsl-semantic" }
nsl-codegen = { path = "crates/nsl-codegen" }

codespan-reporting = "0.11"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
string-interner = "0.17"

cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"
