[build-system]
requires = ["setuptools >= 68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nslpy"
version = "0.2.0"
description = "Python bindings for the NeuralScript (NSL) compiler and runtime"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "NeuralScript Team"},
]
keywords = ["ml", "compiler", "neural-network", "inference", "quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy >= 1.24",
]

[project.optional-dependencies]
torch = ["torch >= 2.0"]
hub = ["huggingface_hub >= 0.20"]
onnx = ["onnxruntime >= 1.17"]
all = ["torch >= 2.0", "huggingface_hub >= 0.20", "onnxruntime >= 1.17"]
dev = ["pytest >= 7.0", "torch >= 2.0"]

[project.urls]
Homepage = "https://github.com/neuralscript/nsl"
Documentation = "https://neuralscript.dev/python"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
