[package]
name = "nsl-cli"
description = "NeuralScript Language Toolchain CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["ml", "compiler", "tensor", "neural-network", "language"]
categories = ["compilers", "science"]

[[bin]]
name = "nsl"
path = "src/main.rs"

[dependencies]
nsl-errors.workspace = true
nsl-lexer.workspace = true
nsl-ast.workspace = true
nsl-parser.workspace = true
nsl-semantic.workspace = true
nsl-codegen.workspace = true
clap.workspace = true
serde_json.workspace = true
safetensors = "0.4"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"
