[package]
name = "nsl-cli"
description = "NeuralScript Language Toolchain CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["ml", "compiler", "tensor", "neural-network", "language"]
categories = ["compilers", "science"]

[lib]
name = "nsl_cli"
path = "src/lib.rs"

[[bin]]
name = "nsl"
path = "src/main.rs"

[dependencies]
nsl-errors.workspace = true
nsl-lexer.workspace = true
nsl-ast.workspace = true
nsl-parser.workspace = true
nsl-semantic.workspace = true
nsl-codegen.workspace = true
nsl-runtime = { path = "../nsl-runtime", features = ["interop"] }
# M57.1 §3.6 (Task 4.1) — `nsl fpga-compile` reads the FixtureFile binary
# format + manifest hash via nsl-test::fixture. Despite the crate name,
# `fixture` is a runtime-callable parser, not a test-only utility.
nsl-test = { path = "../nsl-test" }
clap.workspace = true
serde_json.workspace = true
toml.workspace = true
safetensors = "0.4"
half = { version = "2.4", features = ["std"] }
memmap2 = "0.9"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

[features]
default = []
cuda = ["nsl-codegen/cuda"]
test-hooks = ["nsl-codegen/test-hooks"]
# M62b Spec C — passthrough feature so `cargo build -p nsl-cli --features onnx-rt-op`
# enables nsl-runtime's ONNX Runtime custom-op surface (`RegisterCustomOps`) in the
# .so/.dll produced by `nsl build --shared-lib`.
onnx-rt-op = ["nsl-runtime/onnx-rt-op"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
