[package]
name = "nsl-codegen"
description = "Cranelift-based code generation for NeuralScript"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nsl-ast.workspace = true
nsl-lexer.workspace = true
nsl-semantic.workspace = true
nsl-errors.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-module.workspace = true
cranelift-object.workspace = true
cranelift-native.workspace = true
target-lexicon.workspace = true
nsl-runtime = { path = "../nsl-runtime", features = ["interop"] }
nsl-parser.workspace = true
serde.workspace = true
serde_json = "1"
thiserror = "1"
regex = "1"
sha2 = "0.10"
safetensors = "0.4"
half = { version = "2.4", features = ["std"] }
base64 = "0.22"
object = "0.36"
cudarc = { version = "0.19.4", default-features = false, features = ["driver", "cublas", "cuda-version-from-build-system", "dynamic-linking"], optional = true }
rand = { version = "0.9", optional = true }

[features]
default = []
cuda = ["nsl-runtime/cuda", "dep:cudarc"]
test-hooks = ["nsl-runtime/test-hooks"]
test-helpers = []
calibrate = ["dep:rand"]
debug_kernel_instrumentation = []

[dev-dependencies]
string-interner.workspace = true
insta = { version = "1.40", features = ["yaml"] }
tempfile = "3"
libloading = "0.8"
assert_cmd = "2"
nsl-test = { path = "../nsl-test" }

[[bin]]
name = "cpdt_calibrate"
path = "src/bin/cpdt_calibrate.rs"
required-features = ["calibrate"]

[[bin]]
name = "cpdt_fixture_generate"
path = "src/bin/cpdt_fixture_generate.rs"
required-features = ["calibrate"]

[[bin]]
name = "build_wggo_fixtures"
path = "src/bin/build_wggo_fixtures.rs"

# Cycle-11 Task 4 structural probes. The G3a-G3d gates exercise the
# `bypass_r0_for_testing()` builder on `CheckpointExtras`, which is
# `#[cfg(any(test, feature = "test-helpers"))]`-gated. Integration
# tests compile as separate crates, so `cfg(test)` is NOT active on
# the `nsl-codegen` lib — we MUST enable the `test-helpers` feature.
[[test]]
name = "checkpoint_cycle11_structural"
path = "tests/checkpoint_cycle11_structural.rs"
required-features = ["test-helpers"]

# Cycle-15 Task 1: backward prelude RoPE register block structural witnesses.
# Uses bypass_r0_for_testing() so test-helpers feature is required (same
# rationale as checkpoint_cycle11_structural above).
[[test]]
name = "cycle15_backward_prelude_rope"
path = "tests/cycle15_backward_prelude_rope.rs"
required-features = ["test-helpers"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
required-features = ["cuda", "debug_kernel_instrumentation"]
