[package]
name = "nsl-codegen"
description = "Cranelift-based code generation for NeuralScript"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nsl-ast.workspace = true
nsl-lexer.workspace = true
nsl-semantic.workspace = true
nsl-errors.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-module.workspace = true
cranelift-object.workspace = true
cranelift-native.workspace = true
target-lexicon.workspace = true
nsl-runtime = { path = "../nsl-runtime", features = ["interop"] }
nsl-parser.workspace = true
serde.workspace = true
serde_json = "1"
thiserror = "1"
regex = "1"
sha2 = "0.10"
safetensors = "0.4"
half = { version = "2.4", features = ["std"] }
base64 = "0.22"
object = "0.36"
cudarc = { version = "0.19.4", default-features = false, features = ["driver", "cublas", "cuda-version-from-build-system", "dynamic-linking"], optional = true }
rand = { version = "0.9", optional = true }

[features]
# `default` enables every experimental subsystem, so the normal build and the
# full test suite are unchanged (the experimental-* gates below are compiled
# *out* in a default build, making it byte-identical to before they existed).
# A downstream build can opt OUT of a research subsystem with
# `--no-default-features` plus the subset it wants; the opted-out pass becomes
# a no-op at its entry point. This is phase-1 *behavioral* gating: it disables
# the pass but does not yet strip the subsystem's modules from the binary
# (module-level cfg cascade is staged — see STATUS.md and
# docs/architecture/compiler-state.md). Additional subsystems (WGGO, CSHA, ZK,
# FPGA) follow the same entry-point pattern as the gating is extended.
default = ["experimental-wrga", "experimental-cpdt"]
cuda = ["nsl-runtime/cuda", "dep:cudarc"]
test-hooks = ["nsl-runtime/test-hooks"]
test-helpers = []
calibrate = ["dep:rand"]
debug_kernel_instrumentation = []
# Experimental research subsystems (STATUS.md "Experimental" tier). On by
# default; gated at their single entry point in `stmt.rs`.
experimental-wrga = []
experimental-cpdt = []

[dev-dependencies]
string-interner.workspace = true
insta = { version = "1.40", features = ["yaml"] }
tempfile = "3"
libloading = "0.8"
assert_cmd = "2"
nsl-test = { path = "../nsl-test" }

[[bin]]
name = "cpdt_calibrate"
path = "src/bin/cpdt_calibrate.rs"
required-features = ["calibrate"]

[[bin]]
name = "cpdt_fixture_generate"
path = "src/bin/cpdt_fixture_generate.rs"
required-features = ["calibrate"]

[[bin]]
name = "build_wggo_fixtures"
path = "src/bin/build_wggo_fixtures.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
required-features = ["cuda", "debug_kernel_instrumentation"]
