[package]
name = "nsl-errors"
description = "Error types and diagnostic reporting for the NeuralScript compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
codespan-reporting.workspace = true
serde.workspace = true
