[package]
name = "nsl-parser"
description = "Parser for the NeuralScript language"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nsl-errors.workspace = true
nsl-lexer.workspace = true
nsl-ast.workspace = true
