[package]
name = "nsl-runtime"
description = "Runtime library for NeuralScript programs (tensor ops, autodiff, CUDA)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde_json = "1"
memmap2 = "0.9"
rand = "0.8"
cudarc = { version = "0.19", default-features = false, features = ["driver", "cuda-version-from-build-system", "dynamic-linking"], optional = true }
safetensors = { version = "0.4", optional = true }
hf-hub = { version = "0.3", optional = true }
prost = { version = "0.13", optional = true }
half = { version = "2.4", optional = true, features = ["std"] }
regex-lite = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["interop"]
cuda = ["dep:cudarc"]
interop = ["dep:safetensors", "dep:hf-hub", "dep:prost", "dep:half", "dep:regex-lite"]
