[package]
name = "nsl-runtime"
description = "Runtime library for NeuralScript programs (tensor ops, autodiff, CUDA)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
once_cell = "1"
memmap2 = "0.9"
rand = "0.8"
cudarc = { version = "0.19.4", default-features = false, features = ["driver", "cublas", "cuda-version-from-build-system", "dynamic-linking"], optional = true }
safetensors = { version = "0.4" }
hf-hub = { version = "0.3", optional = true }
prost = { version = "0.13", optional = true }
half = { version = "2.4", optional = true, features = ["std"] }
regex-lite = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
cuda = ["dep:cudarc"]
interop = ["dep:hf-hub", "dep:prost", "dep:half", "dep:regex-lite"]
test-hooks = []
