[package]
name = "nsl-runtime"
description = "Runtime library for NeuralScript programs (tensor ops, autodiff, CUDA)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
once_cell = "1"
libloading = "0.8"
memmap2 = "0.9"
rand = "0.9"
cudarc = { version = "0.19.4", default-features = false, features = ["driver", "cublas", "cuda-version-from-build-system", "dynamic-linking"], optional = true }
safetensors = { version = "0.4" }
hf-hub = { version = "0.3", optional = true }
prost = { version = "0.13", optional = true }
half = { version = "2.4", optional = true, features = ["std"] }
regex-lite = { version = "0.1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"

[features]
default = []
cuda = ["dep:cudarc"]
interop = ["dep:hf-hub", "dep:prost", "dep:half", "dep:regex-lite"]
test-hooks = []
# Opt-in feature for internal-only benchmark/test surfaces that touch the
# `assert_tier_b_sentinels` discipline (planner spec §8.5). The associated
# tests are #![cfg(feature = "bench-internal")]-gated so they don't run in
# normal `cargo test` invocations.
bench-internal = []
# Force cuBLAS to use `CUBLAS_PEDANTIC_MATH` (strict f32) as the default math
# mode instead of `CUBLAS_DEFAULT_MATH` (which enables TF32 tensor cores on
# sm_80+). Per spec 2026-04-21-matmul-cublas-swap-design §9 this is the
# compile-time opt-out for workloads that require strict f32 summation bounds.
# Runtime env vars `NSL_MATMUL_PEDANTIC=1` / `NSL_MATMUL_TF32=1` take
# precedence over this Cargo feature.
strict-matmul = []
