[package]
name = "nsl-semantic"
description = "Type checker and semantic analysis for NeuralScript"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nsl-errors.workspace = true
nsl-lexer.workspace = true
nsl-ast.workspace = true

[dev-dependencies]
string-interner.workspace = true
nsl-parser.workspace = true
